# Drawing-Competition-Frontend-V2

./: .eslintrc.cjs  .gitignore  LICENSE  README.md  creeper.py  example.env  index.html  package.json  pnpm-lock.yaml  vite.config.ts
drawing-comp-backend/: README.md  pyproject.toml
drawing-comp-backend/drawing_comp_backend/: app.py  main.py
drawing-comp-backend/drawing_comp_backend/config/: __init__.py  cors.py  swagger.py
drawing-comp-backend/drawing_comp_backend/controller/: __init__.py  auth.py  challenge.py
drawing-comp-backend/drawing_comp_backend/data/: database.db
drawing-comp-backend/drawing_comp_backend/models/: db.py
drawing-comp-backend/drawing_comp_backend/repository/: __init__.py  challenges.py  rounds.py  teams.py
drawing-comp-backend/drawing_comp_backend/service/: __init__.py  auth_service.py  challenge_service.py
drawing-comp-frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
drawing-comp-frontend/src/: App.tsx  main.tsx
drawing-comp-frontend/src/pages/: Challenge.tsx  ChallengeWithEditor.tsx  Index.tsx  NotFound.tsx  TeamOverview.tsx
drawing-comp-frontend/src/types/: challenges.ts  teamview.ts
drawing-comp-frontend/src/utils/: fakeData.ts
public/: template.py
src/: main.tsx
src/components/challenges/: ChallengeCard.tsx  (+4 more)
src/content/: TurtleTutorial.tsx  WebTutorial.tsx
src/pages/: Challenge.tsx  Index.tsx  Results.tsx  TeamOverview.tsx
src/types/: challenges.ts  teamview.ts
src/utils/: auth.tsx  data.ts  fakeData.ts  requests.tsx  templateTextConsts.tsx  time.ts
(+17 files in other folders)
