[tool.poetry]
name = "drawing-comp-backend"
version = "0.1.0"
description = ""
authors = ["aa35037123 <wesleyshi0321@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
Flask-SQLAlchemy = "^3.1.1"
SQLAlchemy = "^2.0.30"
flask-cors = "^4.0.0"
flasgger = "^0.9.7.1"
flask-migrate = "^4.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
